src/objects/Yardstick_Contact_Details__c.object
<CustomObject>
    <description>Contains information of the ATC belonging to the Student Contact</description>
    <fields>
        <fullName>ATC_ID__c</fullName>
        <description>Accredited training center ID</description>
        <inlineHelpText>Accredited training center ID</inlineHelpText>
        <label>ATC ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC__c</fullName>
        <description>Name of the accredited center school</description>
        <inlineHelpText>Name of the accredited center school</inlineHelpText>
        <label>ATC</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Contact_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Connection to the Account Contact Role record</description>
        <inlineHelpText>Connection to the Account Contact Role record</inlineHelpText>
        <label>Account Contact Role</label>
        <referenceTo>Account_Contact_Role__c</referenceTo>
        <relationshipLabel>Yardstick Contact Details</relationshipLabel>
        <relationshipName>Yardstick_Contact_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Yardstick Contact Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>YCD-{00000}</displayFormat>
        <label>Yardstick Contact Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Yardstick Contact Details</pluralLabel>
    <recordTypes>
        <fullName>Yardstick_Trainee</fullName>
        <active>true</active>
        <description>Yardstick Trainee</description>
        <label>Yardstick Trainee</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>